--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,12 +20,8 @@
     <div id="app">
         <app-header></app-header>
         <main>
-            <div class="container">
-                <div class="text-center">
-                    <img src="/static/images/logo.png" alt="VueJS Logo">
-                    <h1>{{ welcome }}</h1>
-                </div>
-            </div>
+        <!-- component matched by the route will render here -->
+        <router-view></router-view>
         </main>
         <app-footer></app-footer>
     </div>
